# django-portfolio

./: .gitignore  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
case_studies/: apps.py  models.py  urls.py  views.py
case_studies/migrations/: 0001_initial.py
core/: settings.py  urls.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
