[project]
name = "django-porfolio"
version = "0.1.0"
description = "My Django Porfolio project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.97",
    "django-cors-headers>=4.9.0",
    "django-storages[boto3]>=1.14.6",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "gunicorn>=25.3.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]
